<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A0DEFF"
    tools:context=".RegisterActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:strokeWidth="0dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="#FFF9D0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAdicionarSenhas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/adicionarSenha"
                android:fontFamily="@font/robotobold"
                android:textColor="#5AB2FF"
                android:textSize="25sp"
                app:layout_constraintBaseline_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tvSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ubuntusans"
                android:gravity="center"
                android:paddingTop="5dp"
                android:textSize="15sp"
                android:text="@string/nomeDoSite"
                app:layout_constraintStart_toStartOf="@id/tvAdicionarSenhas"
                app:layout_constraintTop_toBottomOf="@id/tvAdicionarSenhas" />

            <EditText
                android:id="@+id/etSite"
                android:inputType="text"
                android:gravity="left"
                android:paddingTop="5dp"
                android:layout_width="150dp"
                android:layout_weight="2"
                android:textSize="10sp"
                android:fontFamily="@font/ubuntusans"
                android:layout_height="wrap_content"
                android:hint="@string/digitarNomeDoSite"
                app:layout_constraintStart_toStartOf="@id/tvSite"
                app:layout_constraintTop_toBottomOf="@id/tvSite"/>

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/ubuntusans"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/usuarioDoSite"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/etSite"
                app:layout_constraintTop_toBottomOf="@id/etSite" />

            <EditText
                android:id="@+id/etUser"
                android:inputType="text"
                android:gravity="left"
                android:paddingTop="5dp"
                android:layout_width="150dp"
                android:layout_weight="2"
                android:textSize="10sp"
                android:fontFamily="@font/ubuntusans"
                android:layout_height="wrap_content"
                android:hint="@string/digitarNomeDoUsuario"
                app:layout_constraintStart_toStartOf="@id/tvUser"
                app:layout_constraintTop_toBottomOf="@id/tvUser"/>

            <TextView
                android:id="@+id/tvSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/ubuntusans"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/senhaDoSite"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/etUser"
                app:layout_constraintTop_toBottomOf="@id/etUser" />

            <EditText
                android:id="@+id/etSenha"
                android:inputType="textPassword"
                android:gravity="left"
                android:paddingTop="5dp"
                android:layout_width="150dp"
                android:layout_weight="2"
                android:textSize="10sp"
                android:fontFamily="@font/ubuntusans"
                android:layout_height="wrap_content"
                android:hint="@string/digitarSenha"
                app:layout_constraintStart_toStartOf="@id/tvSenha"
                app:layout_constraintTop_toBottomOf="@id/tvSenha"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/butaoRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#5AB2FF"
                android:fontFamily="@font/ubuntusans"
                android:text="@string/salvarSenha"
                android:textColor="#FFF9D0"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etSenha"
                app:layout_constraintVertical_bias="0.146"
                tools:layout_editor_absoluteX="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/butaoVoltar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:cornerRadius="10dp"
                android:fontFamily="@font/ubuntusans"
                android:text="@string/voltar"
                android:textColor="#FFF9D0"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="#5AB2FF"
                app:layout_constraintTop_toBottomOf="@id/butaoRegister"
                android:layout_marginTop="20dp"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>