<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A0DEFF"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:strokeWidth="0dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="#FFF9D0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvMinhasSenhas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/gerador"
                android:fontFamily="@font/ubuntusansitalic"
                android:textColor="#5AB2FF"
                android:textStyle="bold"
                android:textSize="25sp"
                app:layout_constraintBaseline_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tvSenha"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:fontFamily="@font/ubuntusans"
                android:hint="@string/senha"
                android:textSize="17sp"
                android:background="@drawable/desenha_aresta"
                android:paddingHorizontal="15dp"
                android:textIsSelectable="true"
                app:layout_constraintTop_toBottomOf="@id/tvMinhasSenhas"
                app:drawableEndCompat="@drawable/ic_copiar" />

            <CheckBox
                android:id="@+id/caixaMinuscula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ubuntusans"
                android:text="@string/minuscula"
                android:checked="true"
                android:buttonTint="#5AB2FF"
                app:layout_constraintStart_toStartOf="@id/tvSenha"
                app:layout_constraintTop_toBottomOf="@id/tvSenha"/>

            <CheckBox
                android:id="@+id/caixaMaiuscula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntusans"
                android:text="@string/maiuscula"
                android:buttonTint="#5AB2FF"
                app:layout_constraintEnd_toEndOf="@id/tvSenha"
                app:layout_constraintStart_toEndOf="@id/caixaMinuscula"
                app:layout_constraintTop_toTopOf="@id/caixaMinuscula"/>

            <CheckBox
                android:id="@+id/caixaNumeros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ubuntusans"
                android:text="@string/numero"
                android:buttonTint="#5AB2FF"
                app:layout_constraintStart_toStartOf="@id/caixaMinuscula"
                app:layout_constraintTop_toBottomOf="@id/caixaMinuscula"/>


            <CheckBox
                android:id="@+id/caixaEspecial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ubuntusans"
                android:text="@string/especial"
                android:buttonTint="#5AB2FF"
                app:layout_constraintStart_toStartOf="@id/caixaMaiuscula"
                app:layout_constraintTop_toBottomOf="@id/caixaMaiuscula"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/butaoGerador"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:cornerRadius="10dp"
                android:fontFamily="@font/ubuntusans"
                android:text="@string/gerar"
                android:textColor="#FFF9D0"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp"
                android:backgroundTint="#5AB2FF"
                app:layout_constraintTop_toBottomOf="@id/caixaEspecial"
                android:layout_marginTop="20dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>